# etl-api-riot

./: .gitignore  README.md  pyproject.toml
riot_analytics/: dbt_project.yml
riot_analytics/models/: sources.yml  stg_matches.sql
riot_analytics/models/marts/: fct_match_players.sql
riot_analytics/models/staging/: stg_players.sql
src/etl_api_riot/: riot_client.py
