[project]
name = "etl-api-riot"
version = "0.1.0"
description = ""
authors = [
    {name = "joaohsilva",email = "joaohasilva416@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "dbt-core (>=1.11.2,<2.0.0)",
    "dbt-snowflake (>=1.11.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "etl_api_riot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
